src/test/resources/wacc_examples/invalid/semanticErr/class/inheritance/classBadAssign.wacc
# a subclass is reassigned to its superclass, which is not allowed.

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  class d extends c {
    int y
  }
  class c {
    int x
  }
  d class1 = new d();
  c class2 = new c();
  class1 = class2
end
